--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
 
 <body>
     <script src="script.js"></script>
-    <span>
+    <span class="span1">
         <img class="reindeer" src="40860-reindeer-dancing.gif" />
         <p>This is my gmail avitar.</p>
-          </span> <span>
+          </span> <span class="span1">
         <img class="ghost" src="ghost.jpg" />
         <p>I just like this photo.</p>
     </span>
-<div>
+<div></div>   
+    <span>
     
         <img class="mountain" src="Mountain.jpg" />
         <p>This looks awesome.</p>
-        <img class="noob" src="Noob%20spray-paint.png" />
+    </span> <span>
+    <img class="noob" src="Noob%20spray-paint.png" />
         <p>I made this in paint.</p>
-    </div>
+    </span>
 </body>
 
 </html>
