--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
         <p>I just like this photo.</p>
     </span>
 <div></div>   
-    <span>
-    
+    <span class="span2">
         <img class="mountain" src="Mountain.jpg" />
         <p>This looks awesome.</p>
-    </span> <span>
+    </span > <span class="span2">
     <img class="noob" src="Noob%20spray-paint.png" />
         <p>I made this in paint.</p>
     </span>
